# gd_px4_control

./: CMakeLists.txt  LICENSE  README.md  flymambo.py  flymambo_example.py  fv_parot_control.py  package.xml  setup.cfg  setup.py  test_user_in.py
gd_px4_control/: gd_px4_signal.py  gd_px4_signal_V2.py  gesture_detection.py  gesture_process_node.py  px4_control.py  test.py  test_gesture.py  test_hands.py  test_sample.py
gd_px4_control/utils/: hand.py  utils.py
include/gd_px4_control/: camera_context.hpp  video_capture.hpp
src/: initialize_cam_pipe.cpp  video_capture.cpp
